--- a/templates/campaigns/new.html
+++ b/templates/campaigns/new.html
@@ -1,8 +1,9 @@
 <html>
   <body>
-    <form action="/sign" method="post">
-      <div><textarea name="content" rows="3" cols="60"></textarea></div>
-      <div><input type="submit" value="Sign Guestbook"></div>
+  	<h2>Nueva campaña</h2>
+    <form action="" method="post">
+      Nombre: <input type='text' name='name' /><br /><br />
+      <div><input type="submit" value="Crear campaña!"></div>
     </form>
   </body>
 </html>
