--- a/templates/advert/view-img.html
+++ b/templates/advert/view-img.html
@@ -5,8 +5,11 @@
 	<b>Nombre:</b> {{ad.name}}<br />
 	<b>Target Url:</b> {{ad.target_url}}<br />
 	<b>Priority:</b> {{ad.priority}}<br />
-	<b>Titulo a mostrar:</b> {{ad.title}}<br />
-	<b>Linea de texto 1:</b> {{ad.description_text_line_1}}<br />
-	<b>Linea de texto 2:</b> {{ad.description_text_line_2}}<br />
-	<b>URL para mostrar:</b> {{ad.visible_url}}<br />
+	
+	<b>Mime Type:</b> {{ad.mimetype}}<br />
+	<b>Preview:</b><img src='/image-ad/{{ad.key.id}}' alt='{{ad.alt_text}}' width='50px'/><br />
+	<b>Alt Text:</b> {{ad.alt_text}}<br />
+	<b>Title Text:</b> {{ad.title_text}}<br />
+	
+	<a href='/image-ad/{{ad.key.id}}'>Ver Imagen tamaño real</a>
 {% endblock %}
